--- a/server/package.json
+++ b/server/package.json
@@ -1,14 +1,16 @@
 {
   "dependencies": {
+    "bcryptjs": "^2.4.3",
+    "cors": "^2.8.5",
     "express": "^4.18.1",
     "jsonwebtoken": "^8.5.1",
     "mongodb": "^4.8.1",
+    "mongoose": "^6.5.0",
     "nodemon": "^2.0.19"
   },
   "name": "server",
   "version": "1.0.0",
   "main": "app.js",
-  "devDependencies": {},
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "nodemon app.js"
