--- a/server/package.json
+++ b/server/package.json
@@ -13,9 +13,16 @@
   "main": "app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon app.js"
+    "start": "nodemon app.js",
+    "server": "nodemon server.js",
+    "client": "npm start --prefix ../client/",
+    "clientinstall": "npm install --prefix client",
+    "dev": "concurrently \"npm run server\"  \"npm run client\""
   },
   "author": "",
   "license": "ISC",
-  "description": ""
+  "description": "",
+  "devDependencies": {
+    "concurrently": "^7.3.0"
+  }
 }
